Correct alignment when title is on 2+ lines

--- a/src/presentation/components/SearchRetailsPoints/SearchResults/SearchResults.module.scss
+++ b/src/presentation/components/SearchRetailsPoints/SearchResults/SearchResults.module.scss
@@ -19,6 +19,7 @@
 
 .shopTitle {
     color: #303036;
+    text-align: left;
     font-size: 18px;
     font-weight: 700;
     margin-bottom: 0;
